<resources>
    <string name="app_name">Stundenverwaltung</string>
    <string name="title_entry">neuer Eintrag</string>
    <string name="title_overview">Übersicht</string>
    <string name="title_settings">Einstellungen</string>
    <string name="datum">Datum*</string>
    <string name="datum1">Datum</string>
    <string name="start">Start</string>
    <string name="ende">Ende</string>
    <string name="pausendauer">Pause</string>
    <string name="gesamte_zeit">Gesamtzeit</string>
    <string name="bemerkung">Bemerkung</string>
    <string name="eintrag_speichern">Eintrag speichern</string>
    <string name="_0">0</string>
    <string name="datum_ndern">Datum ändern</string>
    <string name="firmenname">Firmenname</string>
    <string name="name">Name</string>
    <string name="startzeit">Startzeit*</string>
    <string name="endzeit">Endzeit*</string>
    <string name="pausenzeit">Pausenzeit</string>
    <string name="textview">TextView</string>
    <string name="aktuelle_zeit">Aktuelle Zeit</string>
    <string name="pflichtfelder">* Pflichtfelder</string>
    <string name="standard_anfangszeit">Standard Anfangszeit</string>
    <string name="standard_endzeit">Standard Endzeit</string>
    <string name="standard_pausenzeit">Standard Pausenzeit</string>
    <string name="monat_ausw_hlen">Monat auswählen</string>
    <string name="zeit_l_schen">Zeit löschen</string>
    <string name="zeit_eintragen">Zeit eintragen</string>
    <string name="startzeit1">Startzeit</string>
    <string name="eintrag_ndern1">Eintrag ändern</string>
    <string name="endzeit1">Endzeit</string>
    <string name="eintrag_ndern">Eintrag ändern</string>
    <string name="eintrag_l_schen">Eintrag löschen</string>
    <string name="monat">Monat</string>
    <string name="pdf_erstellen1">PDF Erstellen</string>
    <string name="pdf_erstellen">PDF erstellen</string>
    <string name="einstellungen_ndern">Einstellungen ändern</string>
</resources>