<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnCreatePDF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overview.OverviewFragment">

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="80dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView2"
          android:layout_width="134dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/monat" />

      <Spinner
          android:id="@+id/spinnerMonth"
          android:layout_width="168dp"
          android:layout_height="wrap_content"
          android:layout_weight="1" />

      <Button
          android:id="@+id/btnPDF"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/pdf_erstellen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="5"
          android:text="@string/datum1" />

      <TextView
          android:id="@+id/textView10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="4"
          android:text="@string/startzeit1" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="4"
          android:text="@string/endzeit1" />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="4"
          android:text="@string/pausendauer" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="4"
          android:text="@string/gesamte_zeit" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="4"
          android:text="@string/bemerkung" />

    </LinearLayout>
  </LinearLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="100dp"
      android:layout_marginBottom="50dp"
      android:layout_weight="1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ListView
          android:id="@+id/listViewHours"
          android:layout_width="match_parent"
          android:layout_height="617dp" />
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>