<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_entry">

    <fragment
        android:id="@+id/navigation_entry"
        android:name="de.christine.stundenverwaltung.ui.entry.EntryFragment"
        android:label="@string/title_entry"
        tools:layout="@layout/fragment_entry" />

    <fragment
        android:id="@+id/navigation_overview"
        android:name="de.christine.stundenverwaltung.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.christine.stundenverwaltung.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>