<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

  <ScrollView
      android:id="@+id/sVEntry"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="150dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/lLEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:id="@+id/lLDate"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datum" />

        <Button
            android:id="@+id/btnChangeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLStartTime"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startzeit" />

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCurrentTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aktuelle_zeit" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLEndTime"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endzeit" />

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCurrentTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aktuelle_zeit" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLBreakTime"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVBreakTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pausendauer" />

        <Button
            android:id="@+id/btnBreakTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLTotalTime"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gesamte_zeit"
            tools:text="@string/gesamte_zeit" />

        <TextView
            android:id="@+id/tVShowTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLComment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVCommant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bemerkung" />

        <EditText
            android:id="@+id/eTComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLMandatoryField"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/tVMandatoryField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pflichtfelder" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/lLButtonSave"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eintrag_speichern" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>